kubernetes/objects/mongodb/mongo-express.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: mongodb
  labels:
    app: mongo-express
    service: mongo-express
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: mongo-express
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo-express
  namespace: mongodb
spec:
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: Exists
            weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongo-express
  namespace: mongodb
spec:
  hosts:
  - mongodb.tenlastic.com
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  http:
  - route:
    - destination:
        host: mongo-express
        port:
          number: 8081
